Closed Bug 445934 Opened 18 years ago Closed 18 years ago

Layout linking broken in NS_OSSO disable-libxul configuration

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(2 files, 3 obsolete files)

Attached patch Fast fix (obsolete) — Splinter Review
Building of latest trunk in maemo scratchbox + --disable-libxul broken because missing linking options.. Also I think NS_OSSO define is wrong for location and gpsbt compilation, because NS_OSSO check for libosso dependency.
Attachment #330186 - Flags: review?(doug.turner)
Comment on attachment 330186 [details] [diff] [review] Fast fix seems safe and reasonable. ted is the right guy, though.
Attachment #330186 - Flags: superreview?(ted.mielczarek)
Attachment #330186 - Flags: review?(doug.turner)
Attachment #330186 - Flags: review+
This is second part. Need to be applied after first patch. I don't think that we need separate bug for this fix.... but if we need I can create new bug.
Attachment #330191 - Flags: review?(doug.turner)
Comment on attachment 330191 [details] [diff] [review] MOZ_LOCATION NS_MAEMO_LOCATION defines clearly this is a seperate issue and has nothing to do with NS_OSSO. Please file a seperate bug regarding disabling MOZ_OJI. The patch looks fine, assuming it works.
Attachment #330191 - Flags: review?(doug.turner) → review-
Ups... previous patch was wrong...
Attachment #330191 - Attachment is obsolete: true
Comment on attachment 330194 [details] [diff] [review] Right patch about NS_MAEMO_LOCATION defines... i am confused about hildon, osso, and maemo should this be NS_OSSO_LOCATION and, can you ever have and osso distribution without location apis?
Attachment #330194 - Flags: review?(ted.mielczarek)
> i am confused about hildon, osso, and maemo > > should this be NS_OSSO_LOCATION No, location is mostly related to Maemo platform... OSSO - as name almost dead... Hildon - is layer on top of GTK, should be used in case of Input Method, Theeming, .... > > and, can you ever have and osso distribution without location apis? I think there are no such entity as "osso distribution", there are Maemo Software. See: https://wiki.maemo.org/Maemo_summit_2008 >
Comment on attachment 330186 [details] [diff] [review] Fast fix I don't really like this patch.
Attachment #330186 - Flags: superreview?(ted.mielczarek)
Attachment #330186 - Flags: superreview-
Attachment #330186 - Flags: review-
Attachment #330186 - Flags: review+
Comment on attachment 330194 [details] [diff] [review] Right patch about NS_MAEMO_LOCATION defines... I like this patch.
Attachment #330194 - Flags: review?(ted.mielczarek) → review+
Can we check in this?
Keywords: checkin-needed
Ted: do you want to / need to SR this? You sr-'d the first version, but only r+'d the last...
Ted isn't a super-reviewer.
However, since this is mostly build-related stuff, his r+ might be enough.
Assignee: nobody → romaxa
This patch is bitrotted... please unbitrot it. :)
Keywords: checkin-needed
Attachment #330186 - Attachment is obsolete: true
Attachment #337646 - Flags: superreview?(ted.mielczarek)
Attachment #337646 - Flags: review?(ted.mielczarek)
Attachment #337646 - Attachment is obsolete: true
Attachment #337646 - Flags: superreview?(ted.mielczarek)
Attachment #337646 - Flags: review?(ted.mielczarek)
Comment on attachment 337646 [details] [diff] [review] Updated to trunk. ready to commit Ups, this is not ready yet. +ifdef NS_MAEMO_LOCATION CPPSRCS += MaemoLocationProvider.cpp LOCAL_INCLUDES += $(MOZ_GTK2_CFLAGS) s/MOZ_GTK2_CFLAGS/MOZ_LOCATION_CFLAGS/
Attachment #337653 - Flags: superreview?(ted.mielczarek)
Attachment #337653 - Flags: review?(ted.mielczarek)
Comment on attachment 337653 [details] [diff] [review] Ready to commit +comment 15 build stuff doesn't need sr.
Attachment #337653 - Flags: superreview?(ted.mielczarek)
Attachment #337653 - Flags: review?(ted.mielczarek)
Attachment #337653 - Flags: review+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: