Bug 445934 -  Layout linking broken in NS_OSSO disable-libxul configuration. r=ted.mielczarek